# captcha-parser

./: .gitignore  README.md  clean.py  ocr.py  pyproject.toml  tesserocr-2.7.1-cp313-cp313-win_amd64.whl
src/: main.py  parser.py
